--- a/hotel_booking_app/pubspec.yaml
+++ b/hotel_booking_app/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   http: ^1.1.0
   shared_preferences: ^2.2.2
   flutter_dotenv: ^5.1.1
+  url_launcher: ^6.1.14
 
 dev_dependencies:
   flutter_test:
